<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_Add"
            android:icon="@android:drawable/ic_input_add"
            android:title="@string/addMember" />
        <item
            android:id="@+id/nav_list"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/MembersList" />
        <item
            android:id="@+id/nav_getMyTrackCode"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/getMyTrackCode" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/logout" />
    </group>
</menu>
